@@ -288,6 +288,15 @@ void Win32Look(Value& ch, int widget, int part, int state = 1, bool contentm = f
 	Win32Look(&ch, 1, widget, part, state, contentm);
 }
 
+String XpThemeInfo(LPCWSTR pszPropertyName)
+{
+	wchar theme[512], colors[512], size[512];
+	XpTheme().GetCurrentThemeName(theme, 512, colors, 512, size, 512);
+	wchar h[1024];
+	XpTheme().GetThemeDocumentationProperty(theme, pszPropertyName, h, 1000);
+	return FromUnicode(h);
+}
+
 void ChHostSkin()
 {
 	ChSysInit();
@@ -298,7 +307,9 @@ void ChHostSkin()
 		CtrlsImg::Reset();
 		EditFieldIsThin_Write(1);
 
-		if(IsWinVista()) {
+		bool vista_aero = IsWinVista() && XpThemeInfo(L"ThemeName") == "Aero";
+
+		if(vista_aero) {
 			int efp = 6;
 			for(int i = 0; i < 4; i++) {
 				int efs = i + 1;
@@ -382,7 +393,7 @@ void ChHostSkin()
 		{
 			MultiButton::Style& s = MultiButton::StyleDefault().Write();
 			s.usetrivial = true;
-			if(IsWinVista()) {
+			if(vista_aero) {
 				s.edge[0] = Null;
 				Win32Look(s.look, 4, XP_COMBOBOX, 5);
 				s.trivialborder = s.border = 0;
@@ -437,7 +448,7 @@ void ChHostSkin()
 		}
 		{
 			MenuBar::Style& s = MenuBar::StyleDefault().Write();
-			if(IsWinVista()) {
+			if(vista_aero) {
 				s.itemtext = XpColor(XP_MENU, 14 /*MENU_POPUPITEM*/, 2 /*HOT*/, 3803/*TMT_TEXTCOLOR*/);
 				Win32Look(s.item, XP_MENU, 14 /*MENU_POPUPITEM*/, 2 /*HOT*/);
 				Win32Look(s.popupiconbar, XP_MENU, 13, 1);
@@ -505,7 +516,7 @@ void ChHostSkin()
 
 			MultiButton::StyleDefault().Write().monocolor[i] = c;
 			MultiButton::StyleFrame().Write().monocolor[i] = c;
-			if(!IsWinVista()) {
+			if(!vista_aero) {
 				MultiButton::Style& s = MultiButton::StyleDefault().Write();
 				MultiButton::Style& fs = MultiButton::StyleFrame().Write();
 				Image cm = Unglyph(XpImage(XP_COMBOBOX, CP_DROPDOWNBUTTON, i + 1, Null, Size(20, 20)));
