@@ -9,6 +9,9 @@ FN(HRESULT, GetThemeBool,(HANDLE, int, int, int, BOOL *))
 FN(HRESULT, GetThemeBackgroundContentRect,(HANDLE, HDC, int, int, const RECT *, RECT *))
 FN(BOOL, IsThemePartDefined, (HANDLE hTheme, int iPartId, int iStateId))
 
+FN(HRESULT, GetThemeDocumentationProperty, (LPCWSTR, LPCWSTR, LPWSTR, int))
+FN(HRESULT, GetCurrentThemeName, (LPWSTR, int, LPWSTR, int, LPWSTR, int))
+
 WIDGET(BUTTON)
 WIDGET(SPIN)
 WIDGET(COMBOBOX)
